2008-05-27  Trevor Smigiel  <trevor_smigiel@playstation.sony.com>
	    Sa Liu  <saliu@de.ibm.com> 

	* config/spu/spu.c (spu_init_libfuncs): Add __multi3, __divti3, 
	__modti3, __udivti3, __umodti3 and __udivmodti4.
	* config/spu/t-spu-elf (LIB2FUNCS_STATIC_EXTRA): Add files
	that implement TImode mul and div functions.
	* config/spu/multi3.c: New. Implement __multi3.
	* config/spu/divmodti4.c: New. Implement _udivmodti4 and others.
	* testsuite/gcc.target/spu/muldivti3.c: New. Test TImode mul and div
	functions on SPU.

2008-05-26  Steven Bosscher  <stevenb.gcc@gmail.com>

	* config/rs6000/rs6000.c (rs6000_legitimize_tls_address): Generate
	new tls_gd_* and tls_ld_* insns instead of an insn sequence.
	* config/rs6000/rs6000.md (TLSmode, tls_abi_suffix, tls_insn_suffix,
	tls_sysv_suffix): New mode and mode attribute iterators.
	(tls_gd_32, tls_gd_64, tls_ld_32, tls_ld_64): Remove.
	(lts_gd_aix*, tls_gd_sysv*, tls_ld_aix*, tls_ld_sysv*): New patterns.
	(tls_dtprel_*, tls_dtprel_ha_*, tls_dtprel_lo_*, tls_got_dtprel_*,
	tls_tprel_*, tls_tprel_ha_*, tls_tprel_lo_*, tls_got_tprel_*,
	tls_tls_*): Merge 32 bit and 64 bit variants using aforementioned
	iterators.

2008-05-26  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/36329
	* tree.h (CALL_CANNOT_INLINE_P): Add access check.
	* tree-gimple.h (CALL_STMT_CANNOT_INLINE_P): New macro.
	* cgraphbuild.c (initialize_inline_failed): Use the latter
	macro in lieu of the former.
	* ipa-inline.c (cgraph_mark_inline): Likewise.
	(cgraph_decide_inlining_of_small_function): Likewise.
	(cgraph_decide_inlining): Likewise.
	(cgraph_decide_inlining_incrementally): Likewise.

2008-05-26  Tristan Gingold  <gingold@adacore.com>
            Anatoly Sokolov  <aesok@post.ru>

	* config/avr/avr.md ("call_prologue_saves"): Use hi8(gs())/lo8(gs())
	instead of pm_lo8/pm_hi8 to makes this call working on avr6.
	* config/avr/avr.c (expand_prologue): Tune "call_prologue" 
	optimization for 'avr6' architecture.
