@@ -1,3 +1,7 @@
+2008-05-27  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/pack9.ad[sb]: New test.
+
 2008-05-27  Arnaud Charlet  <charlet@adacore.com>
 
 	* gnat.dg/sync1.ad[sb]: New test.
